feat(cv): update cv

--- a/index.html
+++ b/index.html
@@ -15,19 +15,37 @@
 	    <img src="images/photo.jpg" alt="Photo" width="205" height="230">
 	  </div>
 	  <div class="name">
-	    <h1>Valeriy Beskhmelniy</h1>
-	  </div>	  
+	    <h1> &nbsp;Valeriy Beskhmelniy</h1>
+	  </div>  
 	  <div class="contact-details">
 	    <ul>
-		  <li>email: <a href="mailto:valeriy.upw@gmail.com" target="_blank"><strong>valeriy.upw@gmail.com</strong></a></li>
+		  <li>email: <a href="mailto:waynetech@yandex.com" target="_blank"><strong>waynetech@yandex.com</strong></a></li>
+		  <li>phone: <a href="tel:+79162851491"><strong>+7 916 285-14-91</strong></a></li>
 		  <li>github: <a href="https://github.com/waynet-inc" target="_blank"><strong>github.com/waynet-inc</strong></a></li>
-		  <li>phone: <a href="tel:+998971551490"><strong>+998 97 155-14-90</strong></a></li>
+		  <li>telegram: <a href="https://t.me/WayneTech"><strong>@waynetech</strong></a></li>
 		</ul>		
 	  </div>	  
 	  <div class="clear"></div>
 	  </header>
 	  
 	  <div class="main">
+		<section>
+		  <div class="section-title">
+		    <h2>Research Areas of Interest:</h2>
+		  </div>
+		  <div class="section-content">
+		    <ul class="areas">
+			  <li>Robotics</li>
+			  <li>Machine Learning</li>
+			  <li>Artificial Intelligence</li>
+			  <li>Virtual and Augmented Reality</li>
+			  <li>Blockchain Technology</li>
+			  <li>The IoT and IoE</li>
+		    </ul>
+		  </div>
+		  <div class="clear"></div>
+		</section>	
+	  
 	    <section>
 		  <div class="section-title">
 		    <h2>Key Skills:</h2>
@@ -35,15 +53,12 @@
 		  <div class="section-content">
 		    <ul class="skills">
 			  <li>C/C++</li>
-			  <li>JavaScript</li>
-			  <li>HTML5</li>
-			  <li>CSS3</li>
-			  <li>Git</li>
-			  <li>Linux</li>
-			  <li>Unity</li>
+			  <li>Python</li>
+			  <li>JavaScript, HTML5/CSS3</li>
+			  <li>Git/Bash</li>
+			  <li>Unity (game engine)</li>
 			  <li>Algorithms and Data Structures</li>
 			  <li>Mathematics</li>
-			  <li>Translation skills</li>
 		    </ul>
 		  </div>
 		  <div class="clear"></div>
@@ -54,10 +69,26 @@
 		    <h2>Education:</h2>
 		  </div>
 		  <div class="section-content">
+		  	<article>
+			  <h2>Lomonosov Moscow State University</h2>
+			  <p class="sub-details">Graduation Year: 2025 (expected)</p>
+			  <p><strong>Faculty:</strong> Faculty of Space Research</p>
+			  <p><strong>Specialization:</strong> Mathematical Modeling, Numerical Methods and Program Complexes</p>
+			  <p>PhD student</p>
+			</article>
+			
+		  	<article>
+			  <h2>Lomonosov Moscow State University</h2>
+			  <p class="sub-details">Graduation Year: 2022</p>
+			  <p><strong>Faculty:</strong> Faculty of Space Research</p>
+			  <p><strong>Specialization:</strong> Robotics and Intelligent technologies</p>
+			  <p>Master degree of Applied Mathematics and Computer Science</p>
+			</article>		
+		  
 		    <article>
 			  <h2>Lomonosov Moscow State University</h2>
 			  <p class="sub-details">Graduation Year: 2019</p>
-			  <p>Faculty: Computational Mathematics and Cybernetics</p>
+			  <p><strong>Faculty:</strong> Computational Mathematics and Cybernetics</p>
 			  <p>Bachelor degree of Applied Mathematics and Computer Science</p>
 			</article>				
 		  </div>
@@ -71,8 +102,7 @@
 		  <div class="section-content">
 		    <ul class="langs">
 			  <li>Russian: Native</li>
-			  <li>English: Fluent (B2+)</li>
-			  <li>Uzbek: Conversational</li>
+			  <li>English: Fluent</li>
 			</ul>
 		  </div>
 		  <div class="clear"></div>
@@ -84,24 +114,29 @@
 		  </div>
 		  <div class="section-content">
 		    <article>
-			  <h2>Freelance worker (upwork.com, freelancer.com, etc.)</h2>
-			  <p class="sub-details">2015 - Present</p>
-			  <p>Math teacher • C/C++ developer • Unity developer • EN-RU Translator</p>
+			  <h2>Freelance worker</h2>
+			  <p class="sub-details">2015 - 2022</p>
+			  <p>Math & Informatics teacher • Front-end developer • Unity developer</p>
 			</article>
 			<article>
-			  <h2>EPAM | The Rolling Scopes School</h2>
-			  <p class="sub-details">July 2019 - October 2019</p>
-			  <p>JS / FRONT-END courses student</p>
+			  <h2>BLACK VR LLC</h2>
+			  <p class="sub-details">June 2021 - November 2021</p>
+			  <p>Junior Unity developer</p>
+			</article>
+			<article>
+			  <h2>Brainly, Inc.</h2>
+			  <p class="sub-details">December 2020 - August 2021</p>
+			  <p>Instructional Methodologist</p>
 			</article>
 			<article>
 			  <h2>ACCELERATED BUSINESS CONSULTING LLC</h2>
 			  <p class="sub-details">July 2018 - October 2018</p>
-			  <p>trainee ABAP developer</p>
+			  <p>trainee ABAP developer (SAP NetWeaver WebAS)</p>
 			</article>
 			<article>
 			  <h2>NEWMAX TECHNOLOGIES LLC</h2>
 			  <p class="sub-details">May 2015 - August 2015</p>
-			  <p>trainee Golang Backend developer</p>
+			  <p>trainee Backend developer</p>
 			</article>
 		  </div>
 		  <div class="clear"></div>
@@ -113,9 +148,14 @@
 		  </div>
 		  <div class="section-content">
 		    <article>
-			  <h2>Certicate of Completion | EPAM (The Rolling Scopes School) </h2>
+			  <h2>Certificate of Completion | EPAM (The Rolling Scopes School) </h2>
 			  <p class="sub-details">2019</p>
-			  <p>Successful completion of the Rolling Scopes School RS-UZ 2019 (JavaScript)</p>
+			  <p>Successful completion of the Rolling Scopes School RS-UZ 2019 (Front-end)</p>
+			</article>
+			<article>
+			  <h2>Winner of the Universiade in Space Research | Lomonosov MSU</h2>
+			  <p class="sub-details">2019</p>
+			  <p>In the direction of Applied Mathematics and Computer Science</p>
 			</article>
 			<article>
 			  <h2>ACM Certificate of Achievement | ACM ICPC </h2>
